fixed links and properly aligned them

--- a/public_html/css/iletisim.css
+++ b/public_html/css/iletisim.css
@@ -353,8 +353,25 @@ html * {
     margin-bottom: 10px;
   }
 
+  #tt{
 
-
+    font-size: 70px;
+    margin-left: 20px;
+    
+  }
+  .contentBoxText {
+    text-align: center;
+  }
+  
+  .WebsiteLinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .WebsiteLinks a {
+    margin: 0 10px; /* Adjust margin as needed */
+  }
   .labelMaxWidth{
     width: auto;
   }
